--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">INICIO</a></li>
+                        <a class="nav-link" href="#">INICIO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="bio.html">BIO</a></li>
+                        <a class="nav-link" href="bio.html">BIO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="musica.html">MÚSICA</a></li>
+                        <a class="nav-link" href="musica.html">MÚSICA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="videos.html">VÍDEOS</a></li>
+                        <a class="nav-link" href="videos.html">VÍDEOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="galeria.html">GALERÍA</a></li>
+                        <a class="nav-link" href="galeria.html">GALERÍA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="prensa.html">PRENSA</a></li>
+                        <a class="nav-link" href="prensa.html">PRENSA</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -74,7 +74,7 @@
         <div class="contenedor-del-titulo-animado">
             <div class="row">
                 <div class="col-12">
-                    <h1><img class="titulo-animado" src="imagenes/tranki-punki-titulo.svg" alt="Tranki Punki - Inicio"></h1>
+                    <img class="titulo-animado" src="imagenes/tranki-punki-titulo.svg" alt="Tranki Punki - Inicio">
                 </div>
             </div>
         </div>
@@ -93,9 +93,71 @@
     <footer>
         <div class="footer-del-index">
             <hr> 
-            <p>Copyright © 2021 <strong>Tranki Punki</strong></p>
-            <p class="texto-derechos"><em>Todos los derechos reservados</em></p>
-        </div>
+            <h1>TrankiPunki.com - Inicio</h1>
+            <!-- Menú del footer-->
+            <nav class="nav-del-footer">
+                <ul class="nav-del-footer-main">
+                    <li class="inicio-li">
+                        <a class="footer-nav-link" href="#">INICIO</a>
+                    </li>
+                    <li class="bio-li">
+                        <a class="footer-nav-link" href="bio.html">BIO</a>
+                    </li>
+                    <li class="musica-li">
+                        <a class="footer-nav-link" href="musica.html">MÚSICA</a>
+                    </li>
+                    <li class="videos-li">
+                        <a class="footer-nav-link" href="videos.html">VÍDEOS</a>
+                    </li>
+                    <li class="galeria-li">
+                        <a class="footer-nav-link" href="galeria.html">GALERÍA</a>
+                    </li>
+                    <li class="prensa-li">
+                        <a class="footer-nav-link" href="prensa.html">PRENSA</a>
+                    </li>
+                    <li class="contacto-li">
+                        <a class="footer-nav-link" href="contacto.html">CONTACTO</a>
+                    </li>
+                </ul>
+            </nav>
+            <!-- Redes sociales -->
+            <div class="rrss">
+                <main class="rrss-main">
+                    <div class="rrss-link instagram">
+                        <a href="https://www.instagram.com/tranki_punki/" target="_blank">
+                            <img class="rrss-width" src="imagenes/redes-sociales/instagram.svg" alt="Logo de Instagram">
+                        </a>
+                    </div>
+                    <div class="rrss-link facebook">
+                        <a href="https://www.facebook.com/trankipunki" target="_blank">
+                            <img class="rrss-width" src="imagenes/redes-sociales/facebook.svg" alt="Logo de Facebook">
+                        </a> 
+                    </div>
+                    <div class="rrss-link youtube">
+                        <a href="https://www.youtube.com/channel/UCflgrAJGIh7tVr_kAPMv_jQ" target="_blank">
+                            <img class="rrss-width" src="imagenes/redes-sociales/youtube.svg" alt="Logo de YouTube">
+                        </a>
+                    </div>
+                    <div class="rrss-link twitter">
+                        <a href="https://twitter.com/trankipunki" target="_blank">
+                            <img class="rrss-width" src="imagenes/redes-sociales/twitter.svg" alt="Logo de Twitter">
+                        </a>
+                    </div>
+                    <div class="rrss-link spotify">
+                        <a href="https://open.spotify.com/artist/1voO7UCR96uHnMVl0uyMp7" target="_blank">
+                            <img class="rrss-width" src="imagenes/redes-sociales/spotify.svg" alt="Logo de Spotify">
+                        </a>
+                    </div>
+                    <div class="rrss-link whatsapp">
+                        <a href="https://api.whatsapp.com/send?phone=5493513448676&text=Hola%2C%20quisiera%20contactarme%20con%20la%20representante%20de%20la%20banda." target="_blank">
+                            <img class="rrss-width" src="imagenes/redes-sociales/whatsapp.svg" alt="Logo de Whatsapp">
+                        </a>
+                    </div>
+                </main>
+            </div>            
+            <p class="color-verde">Copyright © 2021. Todos los derechos reservados.</p>
+            <p class="color-blanco">Diseño & Desarrollo Web: <a class="color-fucsia" href="https://github.com/vbarturen"target="_blank">Vicky Barturen</a></p> 
+            </div>
     </footer>
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
