--- a/tienda.html
+++ b/tienda.html
@@ -160,7 +160,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="js/mainVariables.js"></script>
     <script src="js/functions.js"></script>
-    <script src="js/paymentMethodsCalculator.js"></script>
-    <script src="js/tienda.js"></script>
+    <script src="js/store.js"></script>
+    <script src="js/sortProducts.js"></script>
 </body>
 </html>
