--- a/tienda.html
+++ b/tienda.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tienda virtual del merchandising oficial de Tranki Punki">
-    <meta name="keywords" content="merchandising de tranki punki, chop de tranki punki, llavero de tranki punki, disco de tranki punki, indiehoy, la izquierda diario, la voz del interior, la voz, marcha, notas feministas">
+    <meta name="keywords" content="merchandising de tranki punki, chop de tranki punki, llavero de tranki punki, disco de tranki punki, petaca de tranki punki">
     <link rel="icon" type="image/png" href="./imagenes/favicons/favicon16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="./imagenes/favicons/favicon32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="./imagenes/favicons/favicon96x96.png" sizes="96x96">
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Tranki Punki - Notas de prensa</title>
+    <title>Tranki Punki - Tienda oficial</title>
 </head>
 <body>
     <!-- Encabezado -->
