--- a/tienda.html
+++ b/tienda.html
@@ -144,7 +144,7 @@
                             <a class="footer-nav-link" href="contacto.html">CONTACTO</a>
                         </li>                
                     </div>
-                </>
+                </div>
             </div>
             <!--Texto del Footer -->
             <!-- Título del Footer -->
@@ -158,6 +158,7 @@
     </footer>
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="js/data.js"></script>
     <script src="js/mainVariables.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/store.js"></script>
